my-wordpress-chart/templates/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mysql-allow-only-wordpress
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: mysql
  
  policyTypes:
  - Ingress

  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: wordpress
    
    ports:
    - protocol: TCP
      port: 3306
